; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_dump_callback.c_my_writer.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_dump_callback.c_my_writer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.my_sink = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*)* @my_writer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @my_writer(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.my_sink*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = bitcast i8* %9 to %struct.my_sink*
  store %struct.my_sink* %10, %struct.my_sink** %8, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load %struct.my_sink*, %struct.my_sink** %8, align 8
  %13 = getelementptr inbounds %struct.my_sink, %struct.my_sink* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.my_sink*, %struct.my_sink** %8, align 8
  %16 = getelementptr inbounds %struct.my_sink, %struct.my_sink* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = sub i64 %14, %17
  %19 = icmp ugt i64 %11, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %37

21:                                               ; preds = %3
  %22 = load %struct.my_sink*, %struct.my_sink** %8, align 8
  %23 = getelementptr inbounds %struct.my_sink, %struct.my_sink* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.my_sink*, %struct.my_sink** %8, align 8
  %26 = getelementptr inbounds %struct.my_sink, %struct.my_sink* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = add i64 %24, %27
  %29 = load i8*, i8** %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @memcpy(i64 %28, i8* %29, i64 %30)
  %32 = load i64, i64* %6, align 8
  %33 = load %struct.my_sink*, %struct.my_sink** %8, align 8
  %34 = getelementptr inbounds %struct.my_sink, %struct.my_sink* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = add i64 %35, %32
  store i64 %36, i64* %34, align 8
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %21, %20
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @memcpy(i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
